# rasendriya-teknofest-2022

./: CMakeLists.txt  README.md  dataset.rar  package.xml  record_bash.sh  vid_gen.py
calibrationFiles/: Box Length.txt  README.md  cameraDistortion.txt  cameraMatrix.txt
launch/: mission.launch  test_servo.launch  test_waypoint.launch
src/: mission_control.cpp
src/testing/: test_servo.cpp  test_waypoint.cpp
src/vision_programs/: vision_dropzone.py  vision_dropzone_nonROS.py
srv/: Dropzone.srv
